# TokenDNA

./: .env.example  .env.production.example  .env.trial.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ATTIC.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEPLOY.md  Dockerfile  Dockerfile.fips  Dockerfile.railway  HANDOFF_CLAUDE_CODE_EXECUTION.md  HANDOFF_TOKENDNA_ROADMAP_EXECUTION.md  LICENSE  Makefile  NOTICE  README.md  RELEASES.md  SECURITY.md  SIMPLIFICATION_PLAN.md  SIMPLIFICATION_STATUS.md  TRIAL_DEMO_STATUS.md  alembic.ini  api.py  auth.py  config.py  docker-compose.production.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements-prod.txt  requirements.txt  sbom.json  seccomp-profile.json  serve.py  tokendna_licensing_install.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dco.yml  publish.yml  release-docker.yml  release-pypi.yml  (+2 more)
.openclaw/: tasks.yaml
alembic/: env.py
api_routers/: MIGRATION.md  __init__.py  _shared.py  agents.py  assets.py  campaigns.py  certs.py  compliance.py  console.py  delegation.py  demo.py  discovery.py  enforcement.py  enterprise.py  federation.py  identity_surface.py  intel.py  kill.py  license.py  mcp.py  misc.py  passport.py  policy_bundles.py  policy_export.py  policy_guard.py  policy_suggestions.py  product.py  retrieval.py  siem.py  threat_sharing.py  trial.py  v1.py  verifier.py  workflow.py
collector/: Dockerfile  NOTICE  README.md  pyproject.toml
collector/_baseline_pkg/: __init__.py  schema.py
collector/_baseline_pkg/adapters/ai_workload/: __init__.py
collector/_baseline_pkg/adapters/cloud/: __init__.py
collector/_baseline_pkg/adapters/idp/: __init__.py
collector/_baseline_pkg/adapters/siem/: __init__.py
collector/_baseline_pkg/transport/: buffer.py  stream.py
collector/tests/: test_aws_adapter.py  test_azure_adapter.py  test_buffer.py  test_compress.py  test_internal_client.py  test_okta_adapter.py  test_runner.py  test_schema.py  test_shadow_ai.py
collector/tokendna_collector/: __main__.py  config.py  health.py  runner.py
collector/tokendna_collector/adapters/: __init__.py  base.py
collector/tokendna_collector/adapters/cloud/: __init__.py  aws.py  azure.py  shadow_ai.py
collector/tokendna_collector/adapters/idp/: __init__.py  okta.py
collector/tokendna_collector/transport/: __init__.py  buffer.py  compress.py  internal_client.py  stream.py
dashboard/: attribution.html  console.html  demo.html  index.html  trustgraph.html
docs/: AGENT_ASSURANCE_WEDGE.md  BENCHMARK.md  EXPANSION_FEATURES.md  LICENSING.md  OSS_PAID_BOUNDARY_MATRIX.md  PRODUCTION_ROLLOUT_CHECKLIST.md  RELEASE.md  openapi.yaml  quickstart.md
edge/: MARKETPLACE.md  index.js  package.json  wrangler.toml
examples/: agent_identity_teardown.py
landing/: README.md  index.html
onboarding/: aws_connector.py  cloudformation_aegis_role.yml
platform/: NOTICE  README.md  pyproject.toml
platform/.pytest_cache/v/cache/: nodeids
platform/tests/: test_alerts.py  test_backpressure.py  test_compliance.py  test_dedup.py  test_engines_behavioral_dna.py  test_engines_mcp_inspector.py  test_engines_permission_drift.py  test_engines_policy_guard.py  test_engines_trust_graph.py  test_enterprise.py  test_findings.py  test_response_actions.py  test_router.py  test_schema.py  test_schema_registry.py  test_siem_forward.py  test_storage.py
platform/tokendna_platform/: __init__.py  schema.py
platform/tokendna_platform/alerts/: __init__.py  router.py
platform/tokendna_platform/compliance/: __init__.py  reports.py
platform/tokendna_platform/engines/: __init__.py  base.py  behavioral_dna.py  mcp_inspector.py  permission_drift.py  policy_guard.py  trust_graph.py
platform/tokendna_platform/enterprise/: __init__.py  single_tenant.py  soc2_observation.py
platform/tokendna_platform/findings/: __init__.py  finding.py
platform/tokendna_platform/ingestion/: __init__.py  backpressure.py  dedup.py  router.py  schema_registry.py  storage.py
platform/tokendna_platform/response/: __init__.py  actions.py  router.py
platform/tokendna_platform/siem_forward/: __init__.py  forwarder.py
scripts/: adversarial_harness.py  ato_common.py  build_release_bundle.py  collect_ato_evidence.py  compliance_scheduler.py  demo.sh  demo_launch.sh  demo_runtime_risk_engine.py  demo_seed.py  demo_seed_gap.py  demo_seed_v2.py  efficacy_benchmark.py  flywheel_calibration.py  generate_api_reference.py  generate_license_keys.py  generate_oscal.py  idp_ga_validation.py  issue_internal_certs.sh  load_profile.py  load_test_realistic.py  local_appliance_gate.py  migrate_storage.py  operator_slo_gate.py  policy_regression_gate.py  postgres_smoke.py  preflight_prod.py  rotate_internal_certs.sh  rotate_keys.py  rotation_drill.py  shadow_mode_report.py  shadow_trial_report.py  stig_evidence.py  storage_consistency_check.py  stress_harness.py
tests/: __init__.py  conftest.py  load_security_smoke.py  test_abac.py  test_adversarial_harness.py  test_agent_assurance.py  test_agent_discovery.py  test_agent_dna.py  test_agent_identity.py  test_agent_lifecycle.py  test_agent_lifecycle_integration.py  test_alembic_scaffold.py  test_api_decomposition_guards.py  test_asset_inventory.py  test_ato_evidence.py  test_attestation.py  test_attestation_certificates.py  test_attestation_drift.py  test_attestation_primitives.py  test_attestation_store.py  test_audit_log_emission.py  test_behavioral_dna.py  test_blast_radius.py  test_cac_piv.py  test_campaign_correlation.py  test_cert_dashboard.py  test_cert_dashboard_automation.py  test_certificate_status.py  test_certificate_transparency.py  test_commercial_tiers.py  test_compliance.py  test_compliance_engine.py  test_compliance_posture.py  test_console.py  test_db_backend.py  test_ddl_runner.py  test_decision_audit.py  test_delegation_receipt.py  test_demo.py  test_demo_runtime_risk_engine.py  (+95 more)
tokendna_sdk/: README.md  __init__.py  cli.py  client.py  config.py  decorators.py  events.py  exceptions.py  local.py  models.py
(+254 files in other folders)
