[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokendna-platform"
version = "0.0.1"
description = "TokenDNA proprietary cloud intelligence platform — receives events from open-source collectors and runs them through the trust-graph, behavioural-DNA, and policy-guard intelligence engines."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BUSL-1.1" }
authors = [{ name = "TokenDNA Inc." }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
# Stdlib-only for the ingestion-layer skeleton.  Concrete engines that
# move under tokendna_platform/* in later sprints will pull their own
# deps (psycopg, clickhouse-connect, etc.) from the repo-root
# requirements.txt — those are the platform's existing runtime deps.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/Bobcatsfan33/TokenDNA"
Documentation = "https://github.com/Bobcatsfan33/TokenDNA/tree/main/platform"
Repository = "https://github.com/Bobcatsfan33/TokenDNA"

[tool.setuptools.packages.find]
include = ["tokendna_platform*"]
